	* Consolidated the 'Config' class into 'WHConfig'.
	* Added a 'UseNetworkManager=0|1' parameter to webhost.conf(5).
2018-05-28 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHCgiPost::dhcpActive()' method.
	* Added an 'enable_dhcp' parameter to the 'WHCgiPost::sendIpCommand()'
	method.
2018-05-28 Fred Gleason <fredg@paravelsystems.com>
	* Changed the default value of 'UseNetworkManager=' in the '[Webhost]'
	section of webhost.conf(5) from 'false' to 'true'.
2018-05-28 Fred Gleason <fredg@paravelsystems.com>
	* Added code to webhostd(8) to activate/deactivate NetworkManager
	according to the setting of the 'UseNetworkManager=' parameter
	in the '[Webhost]' section of webhost.conf(5).
2018-05-28 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 8:0:5.
	* Incremented the package version to 1.5.0.
2018-06-02 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that broke IPv4 address detection under NetworkManager.
2018-06-02 Fred Gleason <fredg@paravelsystems.com>
	* Changed the default value of the 'UseNetworkManager=' parameter
	in the '[Webhost]' section of webhost.conf(5) to 'false'.
2018-06-02 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 8:1:5.
	* Incremented the package version to 1.5.1.
2018-06-02 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that broke the 'IP' command when in non-NetworkManager
	mode.
2018-06-02 Fred Gleason <fredg@paravelsystems.com>
	* Enabled support for DHCP when in non-NetworkManager mode.
2018-06-02 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that broke IPv4 address detection under NetworkManager.
2018-06-02 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 8:2:5.
	* Incremented the package version to 1.5.2.
2018-06-03 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHWifiConnection' class.
	* Added a 'WHCgiPost::wifiActive()' method.
	* Added a 'WHCgiWifiConnections()' method.