@@ -379,3 +379,7 @@
 	* Added a 'WHWifiConnection' class.
 	* Added a 'WHCgiPost::wifiActive()' method.
 	* Added a 'WHCgiWifiConnections()' method.
+2018-06-19 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'WHConfig::wifiInterfaceName()' method.
+	* Added a 'WHCgiPost::sendConnectWifiCommand()' method.
+	* Added a 'WHCgiPost::sendDisonnectWifiCommand()' method.
